fix align items in price

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ header{
     flex-direction: row;
     justify-content: center;
     flex-wrap:wrap;
-    align-content:center;
+    align-items:center;
 }
 
 /*Requirement 5*/
